# FindTBB

./: .gitignore  .travis.yml  FindTBB.cmake  README.md  test.sh
test/: CMakeLists.txt  sum.cc  sum.h  sum.hpp  test_tbb.cc
test/cmake/: testfindtbb-config.cmake.in
test2/: CMakeLists.txt  test_tbb.cc
